ajustando o css geral

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,10 @@
   />
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-  <link rel=stylesheet href="../src/static/css/estilo.css" type=text/css>
+  <link rel=stylesheet href="%PUBLIC_URL%/css/estiloLoja.css" type=text/css>
     <link rel="icon" href="%PUBLIC_URL%/Favicon.ico" />
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
-
   <body id="root">
    
     <noscript>You need to enable JavaScript to run this app.</noscript>
