--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
   />
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-  <link rel=stylesheet href="%PUBLIC_URL%/css/estiloLoja.css" type=text/css>
     <link rel="icon" href="%PUBLIC_URL%/Favicon.ico" />
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
@@ -49,3 +48,4 @@
 <script>
 	new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
+<script src="./../src/js/Contraste.js"></script>
