adicionando o icone como svg

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   />
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/Favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/ico.svg"/>
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
   
