finalizando o front da página exemplo de compra

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
     <link rel="icon" href="%PUBLIC_URL%/ico.svg"/>
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
-  
     <!-- Vlibras -->
 	<div vw class="enabled">
 		<div vw-access-button class="active"></div>
@@ -30,17 +29,6 @@
 	</div>
   <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
       new window.VLibras.Widget('https://vlibras.gov.br/app');
@@ -165,10 +153,9 @@ groupCards.forEach((item, i ) =>{
     })
 })
   </script>
-
   <script>
     //visualização do produto
-    (document).ready(function(){
+    $(document).ready(function(){
 
 $('#opcImg1').click(function(){
 
