criando os componentes Forms e paginas Atualiza

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 
 				
 if(getCookie2() == "contraste"){
-    link_css = "%PUBLIC_URL%/css/contraste.css";
+    link_css = "%PUBLIC_URL%/css/estiloEscuro.css";
 }
 else if(getCookie() == "default"){
     link_css = "%PUBLIC_URL%/css/estiloLoja.css";
