atribuindo a mascara nos demais campos do forms

--- a/public/index.html
+++ b/public/index.html
@@ -233,6 +233,9 @@ $('#opcImg4').click(function(){
     //mascara
     $(document).ready(function(){
         $('#cep').mask('00000-000')
+        $('#cpf').mask('000.000.000-00')
+        $('#data').mask('00/00/0000')
+        $('#cnpj').mask('00.000.000./0000-00')
     });
 </script>
 
