--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         $('#cnpj').mask('00.000.000./0000-00')
     });
 </script>
-<script type="text/javascript">
+<script>
 link_css = "%PUBLIC_URL%/css/estiloLoja.css";
 
 				
