--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/ico.svg" />
+    <link rel="icon" href="/ico.svg" />
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
 <!-- Vlibras -->
@@ -47,14 +47,14 @@
     });
 </script>
 <script>
-link_css = "%PUBLIC_URL%/css/estiloLoja.css";
+link_css = "/css/estiloLoja.css";
 
 				
 if(getCookie2() == "contraste"){
-    link_css = "%PUBLIC_URL%/css/estiloEscuro.css";
+    link_css = "/css/estiloEscuro.css";
 }
 else if(getCookie() == "default"){
-    link_css = "%PUBLIC_URL%/css/estiloLoja.css";
+    link_css = "/css/estiloLoja.css";
 }
 
 $(document).ready(function(){
