--- a/public/index.html
+++ b/public/index.html
@@ -26,18 +26,18 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 </html>
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
-<script type="text/javascript" src="/js/tema.js"></script>
-<script type="text/javascript" src="/js/fonte.js"></script>
+<script  src="/js/tema.js"></script>
+<script  src="/js/fonte.js"></script>
 <script typ vare="text/javascript" src="/js/tema.js"></script>
-<script type="text/javascript" src="/js/visualizacaoProduto.js"></script>
-<script type="text/javascript" src="/js/apiCep.js"></script>
+<script  src="/js/visualizacaoProduto.js"></script>
+<script  src="/js/apiCep.js"></script>
 <!--Mascara Jquery-->
-<script type="text/javascript" src="/js/mask.js"></script>
-<script type="text/javascript">
+<script  src="/js/mask.js"></script>
+<script >
     //mascara
     $(document).ready(function () {
         $('#cep').mask('00000-000')
