--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 </script>
 <script  src="/js/tema.js"></script>
 <script  src="/js/fonte.js"></script>
-<script typ vare="text/javascript" src="/js/tema.js"></script>
+<script src="/js/tema.js"></script>
 <script  src="/js/visualizacaoProduto.js"></script>
 <script  src="/js/apiCep.js"></script>
 <!--Mascara Jquery-->
