--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
-<script  src="/js/tema.js"></script>
+<script type="text/JavaScript" src="/js/tema.js"></script>
 <script  src="/js/fonte.js"></script>
 <script src="/js/tema.js"></script>
 <script  src="/js/visualizacaoProduto.js"></script>
