--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="/ico.svg" />
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
+<body>
 <!-- Vlibras -->
 <div vw class="enabled">
     <div vw-access-button class="active"></div>
@@ -24,13 +25,12 @@
 </div>
 <div id="root"></div>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-</html>
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
-<script type="text/JavaScript" src="/js/tema.js"></script>
+<script src="/js/tema.js"></script>
 <script  src="/js/fonte.js"></script>
 <script src="/js/tema.js"></script>
 <script  src="/js/visualizacaoProduto.js"></script>
@@ -47,3 +47,6 @@
     });
 </script>
 
+</body>
+
+</html>
