--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 <script  src="/js/apiCep.js"></script>
 <!--Mascara Jquery-->
 <script  src="/js/mask.js"></script>
-<script >
+<script type="text/javascript">
     //mascara
     $(document).ready(function () {
         $('#cep').mask('00000-000')
