--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,17 @@
 </body>
 </html>
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
 <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
-<script src="/js/tema.js"></script>
-<script  src="/js/fonte.js"></script>
-<script src="/js/tema.js"></script>
-<script  src="/js/visualizacaoProduto.js"></script>
-<script  src="/js/apiCep.js"></script>
-<!--Mascara Jquery-->
-<script  src="/js/mask.js"></script>
+<script type="text/javascript" src="/js/tema.js"></script>
+<script type="text/javascript" src="/js/mask.js"></script>
+<script type="text/javascript" src="/js/fonte.js"></script>
+<script type="text/javascript" src="/js/tema.js"></script>
+<script type="text/javascript" src="/js/visualizacaoProduto.js"></script>
+<script type="text/javascript" src="/js/apiCep.js"></script>
+
 <script type="text/javascript">
     //mascara
     $(document).ready(function () {
