--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,6 @@
     <link rel="icon" href="/ico.svg" />
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
-<body>
 <!-- Vlibras -->
 <div vw class="enabled">
     <div vw-access-button class="active"></div>
@@ -25,18 +24,16 @@
 </div>
 <div id="root"></div>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-</body>
-</html>
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
-<script type="text/javascript" src="/js/tema.js"></script>
-<script type="text/javascript" src="/js/mask.js"></script>
+
 <script type="text/javascript" src="/js/fonte.js"></script>
-<script type="text/javascript" src="/js/tema.js"></script>
+<script typ vare="text/javascript" src="/js/tema.js"></script>
 <script type="text/javascript" src="/js/visualizacaoProduto.js"></script>
+
 <script type="text/javascript" src="/js/apiCep.js"></script>
 
 <script type="text/javascript">
@@ -48,3 +45,8 @@
         $('#cnpj').mask('00.000.000./0000-00')
     });
 </script>
+
+<!--Mascara Jquery-->
+<script type="text/javascript" src="/js/mask.js"></script>
+
+</html>
