--- a/public/index.html
+++ b/public/index.html
@@ -99,14 +99,17 @@ function getCookie2(){
     <script type="text/javascript">
         //mascara
         $(document).ready(function () {
-            $('#cep').mask('00000-000')
-            $('#cpf').mask('000.000.000-00')
-            $('#data').mask('00/00/0000')
-            $('#cnpj').mask('00.000.000./0000-00')
+            $('#cep').mask('00000-000');
+            $('#cpf').mask('000.000.000-00');
+            $('#data').mask('00/00/0000');
+            $('#cnpj').mask('00.000.000./0000-00');
+            
+            
         });
     </script>
 
     <!--Mascara Jquery-->
     <script type="text/javascript" src="/js/mask.js"></script>
+    <script type="text/javascript" src="/js/botao.js"></script>
 </html>
 
