--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,6 @@
 <script src="/js/visualizacaoProduto.js"></script>
 <!--Mascara Jquery-->
 <script type="text/javascript" src="/js/mask.js"></script>
-<script src="/js/jquery.maskMoney.min.js" type="text/javascript"></script>
-
 <script type="text/javascript" src="/js/botao.js"></script>
 
 <script type="text/javascript">
@@ -103,11 +101,7 @@
         $('#cpf').mask('000.000.000-00');
         $('#data').mask('00/00/0000');
         $('#cnpj').mask('00.000.000./0000-00');
-        $("#precoProduto").maskMoney({
-        prefix:'R$ ', 
-        thousands:'.', 
-        decimal:','
-    })
+        $('#precoProduto').mask('#.##0,00', {reverse: true});
     })
 </script>
 
