--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,8 @@
     $(document).ready(function () {
         $('#cep').mask('00000-000');
         $('#cpf').mask('000.000.000-00');
-        $('#data').mask('00/00/0000');
-        $('#cnpj').mask('00.000.000./0000-00');
+        $('#data').mask('00/00/0000');        
+        $('#cnpj').mask('00.000.000/0000-00');
         $('#precoProduto').mask('#.##0,00', {reverse: true});
     })
 </script>
