--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/ico.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icone.png" />
     <title>Full Sports - O Melhor Dos Artigos Esportivos Para Você</title>
 </head>
 <!-- Vlibras -->
